ProgressHeatMap: Fix tool tip cut off issue

--- a/src/components/IntroPanel/ActivityHeatmap/ActivityHeatmap.module.css
+++ b/src/components/IntroPanel/ActivityHeatmap/ActivityHeatmap.module.css
@@ -4,31 +4,26 @@
 	color: var(--color-text-primary);
 }
 
-.heatmap_container
-{
+.heatmap_container {
 	--grid_gap: 3px;
 	--cell-size: 0.6rem;
 
-	.heatmap_header
-	{
-
+	.heatmap_header {
 		display: flex;
 		justify-content: space-between;
 		padding: 0.25rem 0.5rem;
 
-		.streak_text
-		{
+		.streak_text {
 			font-weight: 600;
 			font-size: var(--font-size-sm);
-			
-			& span
-			{
+
+			& span {
 				font-size: var(--font-size-md);
 			}
 		}
 	}
 
-	.heatmap_wrapper{
+	.heatmap_wrapper {
 		display: flex;
 		border: 1px solid var(--color-border);
 		border-radius: var(--border-radius);
@@ -37,8 +32,8 @@
 		background-color: var(--color-surface);
 
 		.heatmap_content {
-			display: grid;
 			max-width: 25rem;
+			display: grid;
 			overflow: auto;
 			margin: 0.5rem;
 			grid-template-areas:
@@ -46,8 +41,7 @@
 				'day_header	heatmap';
 			column-gap: var(--grid_gap);
 
-			@media(min-width: 768px)
-			{
+			@media (min-width: 768px) {
 				max-width: 45rem;
 			}
 
@@ -56,7 +50,7 @@
 				grid-area: month_header;
 				gap: var(--grid_gap);
 			}
-	
+
 			.heatmap_grid {
 				display: grid;
 				grid-area: heatmap;
@@ -64,19 +58,19 @@
 				grid-auto-columns: var(--cell-size);
 				grid-template-rows: repeat(7, var(--cell-size));
 				gap: var(--grid_gap);
-	
+
 				.cell {
 					width: var(--cell-size);
 					height: var(--cell-size);
 					background: green;
 					border-radius: 2px;
-	
+
 					&.empty {
 						background-color: var(--color-background);
 					}
 				}
 			}
-	
+
 			.day_header {
 				display: grid;
 				grid-area: day_header;
